--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "deploy": "node ./scripts/replaceIframeDomain.js && yarn build:css:pro"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "tailwindcss": "^3.0.6"
   }
 }
